# packages/generated-api/kotlin/src/main/kotlin/com/love_reply/generated/model/AdminUserDeviceRevokeRequest.kt
@@ -1,0 +1,49 @@
+/**
+ *
+ * Please note:
+ * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * Do not edit this file manually.
+ *
+ */
+
+@file:Suppress(
+    "ArrayInDataClass",
+    "DuplicatedCode",
+    "EnumEntryName",
+    "RemoveRedundantQualifierName",
+    "RemoveRedundantCallsOfConversionMethods",
+    "REDUNDANT_CALL_OF_CONVERSION_METHOD",
+    "RedundantUnitReturnType",
+    "RemoveEmptyClassBody",
+    "UnnecessaryVariable",
+    "UnusedImport",
+    "UnnecessaryVariable",
+    "unused"
+)
+
+package com.love_reply.generated.model
+
+
+import com.squareup.moshi.Json
+import com.squareup.moshi.JsonClass
+
+/**
+ *
+ *
+ * @param auditReason
+ * @param confirmationDeviceId
+ */
+
+
+data class AdminUserDeviceRevokeRequest (
+
+    @Json(name = "auditReason")
+    val auditReason: kotlin.String,
+
+    @Json(name = "confirmationDeviceId")
+    val confirmationDeviceId: kotlin.String
+
+) {
+
+
+}
