# packages/generated-api/kotlin/src/main/kotlin/com/love_reply/generated/model/AdminUserSecurityResetRequest.kt
@@ -1,0 +1,49 @@
+/**
+ *
+ * Please note:
+ * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * Do not edit this file manually.
+ *
+ */
+
+@file:Suppress(
+    "ArrayInDataClass",
+    "DuplicatedCode",
+    "EnumEntryName",
+    "RemoveRedundantQualifierName",
+    "RemoveRedundantCallsOfConversionMethods",
+    "REDUNDANT_CALL_OF_CONVERSION_METHOD",
+    "RedundantUnitReturnType",
+    "RemoveEmptyClassBody",
+    "UnnecessaryVariable",
+    "UnusedImport",
+    "UnnecessaryVariable",
+    "unused"
+)
+
+package com.love_reply.generated.model
+
+
+import com.squareup.moshi.Json
+import com.squareup.moshi.JsonClass
+
+/**
+ *
+ *
+ * @param auditReason
+ * @param confirmationUserId
+ */
+
+
+data class AdminUserSecurityResetRequest (
+
+    @Json(name = "auditReason")
+    val auditReason: kotlin.String,
+
+    @Json(name = "confirmationUserId")
+    val confirmationUserId: kotlin.String
+
+) {
+
+
+}
